<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">静音助手</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="starttimehour">08</string>
    <string name="sign">——</string>
    <string name="dest">上课</string>
    <string name="stoptime">10:00</string>
    <string name="drawline">____________________________________________________________________________________________</string>
    <string name="addlayout">添加</string>
    <string name="drawtimeline">_______________________________________________________________________________________</string>
    <string name="starttimeminute">00</string>
    <string name="stoptimeminute">00</string>
    <string name="stoptimehour">10</string>
    <string name="time_sign">:</string>
    <string name="saveline">________________________________________________________________________________________________</string>

</resources>
